# finance2

./: .gitignore  ADAPTERS.md  AEGIS-ADVANCED.md  AEGIS.md  AEGIS_PRODUCTION_UPLIFT_PLAN.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aegis/: __init__.py  config.py  crypto.py  models.py  runtime.py  testkit.py
aegis/adapters/: __init__.py  settlement.py
aegis/ap2/: __init__.py  constraints.py  disclosure.py  disputes.py  mandates.py  sandbox.py  scope_ledger.py  sdjwt.py  verifier.py  wysiwys.py
aegis/data/: __init__.py  reference.py  sanctions.json
aegis/gateway/: __init__.py  main.py  verify.py
aegis/ledger/: __init__.py  evidence.py  store.py
aegis/matching/: __init__.py  fuzzy.py
aegis/ml/: __init__.py  embedder.py  risk_model.py
aegis/pipeline/: __init__.py  context.py  f1_jurisdiction.py  f2_sanctions.py  f3_structuring.py  f4_adversarial.py  f5_risk_stepup.py  (+3 more)
demo/: advanced_demo.py  demo.py
deploy/: Dockerfile
policy/: bundle.manifest  jurisdiction.rego  travel_rule.rego
tests/: conftest.py  test_adversarial.py  test_ap2_constraints.py  test_ap2_disclosure.py  test_ap2_sandbox.py  test_ap2_scope_ledger.py  test_ap2_sdjwt.py  test_ap2_verifier.py  test_ap2_wysiwys_disputes.py  test_conformance_ap2.py  test_degradation.py  test_gateway.py  test_jurisdiction.py  test_ledger_replay.py  test_orchestrator.py  test_persistence.py  test_sanctions.py  test_screening.py  test_stepup_liability.py  test_structuring.py
(+17 files in other folders)
